Fix post title top margin too large

--- a/css/main.css
+++ b/css/main.css
@@ -400,13 +400,15 @@ footer .theme-by {
 
 .post-preview .post-title {
   font-size: 26px;
-  margin-top: 0;
+  margin-top: -95px;
   border-bottom: 0px;
+  padding-top: 0px;
 }
 .post-preview .post-subtitle {
   margin: 5px 0 10px 0;
   /* font-weight: 300; */
   /* margin-bottom: 10px; */
+  padding-top: 0px;
 }
 .post-preview .post-meta,
 .post-heading .post-meta {
